--- a/src/home/index.less
+++ b/src/home/index.less
@@ -20,6 +20,10 @@
   margin: 0 auto;
 }
 
+.search {
+  margin: -400px 0;
+}
+
 .iconlist {
   display: flex;
   justify-content: space-between;
@@ -29,44 +33,4 @@
     width: 100px;
     height: 100px;
   }
-}
-
-/* 顶部搜索框 */
-.search-wrap {
-  width: 100%;
-  height: 100px;
-  padding: 10px 30px 10px 10px;
-  margin: -400px 0;
-  background-color: #d2d2d2;
-  border-radius: 10px;
-  align-items: center;
-}
-
-.search-box {
-  flex: 1;
-  padding: 20px;
-  border-radius: 5px;
-}
-
-.search-box input {
-  margin-left: 15px;
-  font-size: 32px;
-}
-
-.keywords {
-  margin-left: 10px;
-  color: #000;
-}
-
-.back-img {
-  width: 50px;
-  margin-right: 20px;
-  align-self: center;
-}
-
-.search-text {
-  width: 50px;
-  color: #fff;
-  margin-left: 20px;
-  font-size: 36px;
 }
