--- a/src/search/index.less
+++ b/src/search/index.less
@@ -1,11 +1,44 @@
 .page {
   flex-direction: column;
   justify-content: space-between;
-  background-color: #fff;
+  background-color: #f4f5f7;
 }
 
+/* 顶部搜索框 */
 .search-wrap {
-  padding: 30px 30px 0;
+  width: 100%;
+  height: 100px;
+  padding: 10px 30px;
+  background-color: #c44944;
+}
+
+.search-box {
+  flex: 1;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+}
+
+.search-box input {
+  margin-left: 15px;
+  font-size: 32px;
+}
+
+.keywords {
+  margin-left: 10px;
+  color: #000;
+}
+
+.back-img {
+  width: 50px;
+  margin-right: 20px;
+  align-self: center;
+}
+
+.search-text {
+  color: #fff;
+  margin-left: 20px;
+  font-size: 36px;
 }
 
 /* 搜索页 */
@@ -109,13 +142,14 @@
 }
 
 .content-list {
-  margin: 0 30px;
   flex: 1;
+  padding: 0 30px;
   background-color: #fff;
 }
 
 .content-list-item {
   flex-direction: column;
+  padding: 30px 0;
   border: 1px solid transparent;
   border-bottom-color: #e6e6e6;
 }
@@ -167,7 +201,33 @@
   justify-content: center;
 }
 
-.footer {
+/* 底部导航 */
+.foot-wrap {
+  width: 100%;
+  height: 110px;
+  padding: 0 60px;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 1px solid transparent;
+  border-top-color: #e6e6e6;
   background-color: #f4f5f7;
-  padding: 0 40px;
+}
+
+.foot-box {
+  height: 110px;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.foot-box-img {
+  width: 100px !important;
+}
+
+.foot-box text {
+  font-size: 30px;
+}
+
+.text-one-line {
+  lines: 1;
+  text-overflow: ellipsis;
 }
