--- a/src/components/tabbar/index.less
+++ b/src/components/tabbar/index.less
@@ -22,3 +22,66 @@
 .foot-box text {
   font-size: 30px;
 }
+
+.pop-content {
+  flex-direction: column;
+  padding: 30px;
+
+  .pop-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  
+    image {
+      width: 100px;
+      height: 100px;
+      border-radius: 100px;
+    }
+  
+    .pop-login {
+      flex: 1;
+      flex-direction: column;
+      padding: 14px 0 0 40px;
+  
+      .title {
+        font-weight: bold;
+        font-size: 30px;
+      }
+  
+      .desc {
+        font-size: 20px;
+      }
+    }
+  
+    .add-desktop {
+      padding: 16px 26px;
+      background: #eee;
+      border-radius: 30px;
+      font-size: 26px;
+    }
+  }
+
+  .list-wrap {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 30px 0;
+  
+    .list-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  
+      image {
+        width: 40px;
+        height: 40px;
+        margin-bottom: 14px;
+      }
+
+      text {
+        font-size: 20px;
+      }
+    }
+  }
+}
+
