1、导入quickapp-vuex 2、首页链接跳转

--- a/src/frame/index.less
+++ b/src/frame/index.less
@@ -8,7 +8,7 @@
   padding: 0 40px;
 }
 
-.page .hap-element {
-  width: 100vw;
-  height: calc(100vh - 120px);
+.web-comp {
+  width: 760px;
+  height: 1220px;
 }
