--- a/src/components/tabbar/index.less
+++ b/src/components/tabbar/index.less
@@ -23,6 +23,14 @@
   font-size: 30px;
 }
 
+.dialog {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
 .pop-content {
   flex-direction: column;
   padding: 30px;
@@ -33,15 +41,15 @@
     align-items: center;
   
     image {
-      width: 100px;
-      height: 100px;
+      width: 70px;
+      height: 70px;
       border-radius: 100px;
     }
   
     .pop-login {
       flex: 1;
       flex-direction: column;
-      padding: 14px 0 0 40px;
+      padding: 0 0 0 20px;
   
       .title {
         font-weight: bold;
@@ -55,9 +63,9 @@
   
     .add-desktop {
       padding: 16px 26px;
-      background: #eee;
+      background-color: #eeeeee;
       border-radius: 30px;
-      font-size: 26px;
+      font-size: 20px;
     }
   }
 
