--- a/src/components/tabbar/index.less
+++ b/src/components/tabbar/index.less
@@ -29,6 +29,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 0;
 }
 
 .pop-content {
@@ -92,4 +93,39 @@
     }
   }
 }
+.mar20 {
+  margin: 20px 0;
+}
+.wrap-form {
+  flex: 1;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  .item {
+    border: 1px solid #eeeeee;
+    background-color: #fff;
+    height: 80px;
+    width: 100%;
+    padding-left: 20px;
+    align-items: center;
+    justify-content: space-between;
+    .type {
+      height: 80px;
+      width: 40%;
+      justify-content: space-between;
+    }
+    .icon {
+      justify-content: space-between;
+    }
+  }
+}
 
+.input input {
+  width: 100%
+}
+
+.textarea textarea {
+  font-size: 30px;
+  padding: 20px;
+  background-color: #eee;
+}
