隐私政策、关于我们

--- a/src/components/dialog/index.less
+++ b/src/components/dialog/index.less
@@ -48,6 +48,7 @@
       height: 98px;
       text-align: right;
       padding: 0 16px;
+      justify-content: center;
       .default-btn {
         width: 265px;
         height: 98px;
