--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -34,3 +34,39 @@
     height: 100px;
   }
 }
+
+
+.dialog {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+.mar20 {
+  margin: 20px 0;
+}
+.wrap-form {
+  flex: 1;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  .item {
+    border: 1px solid #eeeeee;
+    background-color: #fff;
+    height: 80px;
+    width: 100%;
+    padding-left: 20px;
+    align-items: center;
+    justify-content: space-between;
+    .type {
+      height: 80px;
+      width: 40%;
+      justify-content: space-between;
+    }
+    .icon {
+      justify-content: space-between;
+    }
+  }
+}
