--- a/src/components/booklist/index.less
+++ b/src/components/booklist/index.less
@@ -1,7 +1,5 @@
 .page {
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: #fff;
+  flex: 1;
 }
 
 .search-wrap {
@@ -59,7 +57,6 @@
 .img {
   width: 150px;
   height: 200px;
-  overflow: hidden;
   border-radius: 8px;
   margin-right: 20px;
 }
@@ -67,7 +64,7 @@
 .content {
   flex: 1;
   flex-direction: column;
-  justify-content: space-arround;
+  justify-content: space-around;
   text-align: left;
 }
 
@@ -78,7 +75,7 @@
 .desc {
   margin-top: 16px;
   flex: 1;
-  align-items: start;
+  align-items: flex-start;
   flex-direction: column;
   text {
     color: #5d5d5d;
