--- a/src/components/search/index.less
+++ b/src/components/search/index.less
@@ -8,15 +8,12 @@
 }
 
 .search-box {
-  flex: 1;
-  padding: 20px;
-  border-radius: 5px;
-}
-
-.search-box input {
-  margin-left: 15px;
-  font-size: 32px;
-  width: 100%;
+  height: 100%;
+  input {
+    font-size: 32px;
+    width: 100%;
+    padding-left: 20px;
+  }
 }
 
 .search-text {
