--- a/src/components/tabbar/index.less
+++ b/src/components/tabbar/index.less
@@ -16,7 +16,7 @@
 }
 
 .foot-box-img {
-  width: 100px !important;
+  width: 100px;
 }
 
 .foot-box text {
@@ -26,7 +26,7 @@
 .dialog {
   width: 100%;
   height: 100%;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   z-index: 0;
@@ -40,6 +40,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 30px;
   
     image {
       width: 70px;
@@ -74,12 +75,13 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 30px 0;
   
     .list-item {
       display: flex;
       flex-direction: column;
       align-items: center;
+      border-radius: 4px;
+      padding: 30px;
   
       image {
         width: 40px;
@@ -91,10 +93,39 @@
         font-size: 20px;
       }
     }
+
+    .list-item:active, .list-item:focus {
+      background-color: #e0dede;
+    }
   }
 }
 .mar20 {
   margin: 20px 0;
+}
+.textarea {
+  font-size: 26px;
+  background-color: #eee;
+  padding: 20px;
+  width: 100%;
+  height: 160px;
+  border-radius: 10px;
+}
+.input-text {
+  font-size: 26px;
+  padding: 20px;
+  background-color: #eee;
+  width: 100%;
+  border-radius: 10px;
+}
+.wrap {
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  z-index: 100;
+}
+.icon-close {
+  padding-top: 31px;
+  padding-right: 30px;
 }
 .wrap-form {
   flex: 1;
