--- a/src/pages/collect/index.less
+++ b/src/pages/collect/index.less
@@ -26,7 +26,6 @@
 .back {
   width: 50px;
   height: 50px;
-  overflow: hidden;
   left: 20px;
   top: 30px;
   position: fixed;
@@ -53,6 +52,7 @@
   flex-direction: column;
 }
 .item-content {
+  flex: 1;
   flex-direction: column;
   padding-bottom: 30px;
 }
