--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -30,8 +30,17 @@
   align-items: center;
 
   .item {
-    width: 100px;
-    height: 100px;
+    flex-direction: column;
+    align-items: center;
+    .img {
+      width: 80px;
+      height: 80px;
+      margin-bottom: 10px;
+    }
+    text {
+      font-size: 20px;
+      color: #aaa;
+    }
   }
 }
 
@@ -39,13 +48,28 @@
 .dialog {
   width: 100%;
   height: 100%;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   z-index: 0;
 }
 .mar20 {
   margin: 20px 0;
+}
+.textarea {
+  font-size: 26px;
+  background-color: #eee;
+  padding: 20px;
+  width: 100%;
+  height: 160px;
+  border-radius: 10px;
+}
+.input-text {
+  font-size: 26px;
+  padding: 20px;
+  background-color: #eee;
+  width: 100%;
+  border-radius: 10px;
 }
 .wrap-form {
   flex: 1;
