搜索引擎跳转对应页面

--- a/src/components/underlineTabBar/index.less
+++ b/src/components/underlineTabBar/index.less
@@ -5,7 +5,7 @@
   height: 80px;
   .tab-item {
     .flex-box-mixins(column, flex-end, center);
-    padding: 15px 40px 0 40px;
+    padding: 15px 15px 0;
     .tab-line {
       margin-top: 10px;
       height: 5px;
