--- a/src/pages/collect/index.less
+++ b/src/pages/collect/index.less
@@ -1,3 +1,6 @@
+.page {
+  flex-direction: column;
+}
 .tabs {
   flex: 1;
   background-color: #ffffff;
@@ -55,4 +58,9 @@
   flex: 1;
   flex-direction: column;
   padding-bottom: 30px;
+}
+.footer-wrap {
+  height: 100px;
+  justify-content: space-around;
+  border-top: 2px solid #d5c6c6;
 }
