--- a/src/pages/search/index.less
+++ b/src/pages/search/index.less
@@ -8,13 +8,13 @@
 .search-wrap {
   width: 100%;
   height: 100px;
-  padding: 10px 30px;
+  padding: 10px 20px;
   background-color: #c44944;
 }
 
 .search-box {
   flex: 1;
-  padding: 20px;
+  padding: 0 0 0 20px;
   background-color: #fff;
   border-radius: 5px;
 }
@@ -230,4 +230,8 @@
 .text-one-line {
   lines: 1;
   text-overflow: ellipsis;
+}
+
+#search_input {
+  flex: 1;
 }
