--- a/src/pages/history/index.less
+++ b/src/pages/history/index.less
@@ -8,6 +8,12 @@
   padding: 30px 30px 0;
 }
 
+.delAll {
+  position: fixed;
+  top: 24px;
+  right: 24px;
+}
+
 .empty {
   font-size: 20px;
   width: 100%;
