下载列表，长按删除交互

--- a/src/pages/download/index.less
+++ b/src/pages/download/index.less
@@ -169,3 +169,17 @@
   background-color: #f4f5f7;
   padding: 0 40px;
 }
+
+.mr20 {
+  margin-right: 20px;
+}
+
+.ml10 {
+  margin-left: 10px;
+}
+
+.footer-wrap {
+  height: 100px;
+  justify-content: space-around;
+  border-top: 2px solid #d5c6c6;
+}
