--- a/src/pages/collect/index.less
+++ b/src/pages/collect/index.less
@@ -1,5 +1,11 @@
 .page {
   flex-direction: column;
+  width: 100%;
+}
+.btn {
+  text-align: center;
+  flex: 1;
+  justify-content: center;
 }
 .tabs {
   flex: 1;
