--- a/src/pages/download/index.less
+++ b/src/pages/download/index.less
@@ -183,3 +183,9 @@
   justify-content: space-around;
   border-top: 2px solid #d5c6c6;
 }
+
+.btn {
+  text-align: center;
+  flex: 1;
+  justify-content: center;
+}
